# agent_pdf_pipeline

./: .gitignore  README.md  main.py  pdf_parser.py  pyproject.toml
.output/monolith_realtime_recommend/: monolith_realtime_recommend_parsed.md
src/Processing/: code_snippet.py  image_extractor.py  markdown_output.py  math_notation.py  metadata_extractor.py  page_parser.py  pdf_parser.py  pdf_parser_config.yaml  pdf_to_markdown.py  table_extractor.py  text_extractor.py
src/Utils/Functions/ARCHIVE/: ARCHIVE_pdf_parser.py  ARCHIVE_pdf_to_markdown.py
src/Utils/Functions/Directory_tree/: README.md  directory_tree.py  directory_tree.yaml  project_directory_tree.md  tree.md
src/Utils/Functions/File_aggregator/: aggregated_files.md  file_aggregator.py  file_aggregator.yaml  file_aggregator_notes.md
src/Utils/Functions/Logfire_export/: README.md  logfire_export.py  logfire_export_config.yaml
src/Utils/Functions/Logfire_export/logfire_export_output/: logfire_errors.json
src/Utils/Logger/: logfire.py
